Fixed link to socket io script

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,7 @@
             border: 5px solid black;
         }
     </style>
-    <script type="application/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="application/javascript" src="//hugovandevliert.com:5000/socket.io/socket.io.js"></script>
 </head>
 
 <body>
