Added an extremely simple chat room

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,6 +14,11 @@
 
 <body>
     <canvas id="canvas"></canvas>
+
+    <ul id="message-list"></ul>
+    <form id="message-form" action="">
+        <input id="message-input" autocomplete="off" /><button>Send</button>
+    </form>
 </body>
 <script type="application/javascript" src="js/client.js"></script>
 
