Added utf-8 encoding meta tag

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Bomberman</title>
+    <meta charset="utf-8"/>
     <script type="application/javascript" src="//hugovandevliert.com:5000/socket.io/socket.io.js"></script>
 </head>
 
