--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,12 +2,13 @@
 
 <head>
     <title>Bomberman</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <script type="application/javascript" src="//hugovandevliert.com:5000/socket.io/socket.io.js"></script>
 </head>
 
 <body>
     <canvas id="canvas"></canvas>
+    <button id="restart">Restart</button>
 
     <ul id="message-list"></ul>
     <form id="message-form" action="">
