Added simple footer

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,9 +14,19 @@
     <div id="chat-box">
         <ul id="message-list"></ul>
         <form id="message-form" action="">
-            <input id="message-input" autocomplete="off" /><button>Send</button>
+            <input id="message-input" autocomplete="off" />
+            <button>Send</button>
         </form>
     </div>
+
+    <footer>
+        <p>
+            &copy;
+            <script>document.write(new Date().getFullYear())</script>
+            -
+            by <a href="https://github.com/hugovandevliert" target="_blank">Hugo van de Vliert</a>
+        </p>
+    </footer>
 </body>
 <script type="application/javascript" src="js/client.js"></script>
 
