Add viewport meta

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-    <title>Bomberman</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bomberman</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="application/javascript" src="//hugovandevliert.com:5000/socket.io/socket.io.js"></script>
 </head>
