Link to hugovandevliert.com instead of github

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -30,7 +30,7 @@
             &copy;
             <script>document.write(new Date().getFullYear())</script>
             -
-            by <a href="https://github.com/hugovandevliert" target="_blank">Hugo van de Vliert</a>
+            by <a href="https://hugovandevliert.com">Hugo van de Vliert</a>
         </p>
     </footer>
 </body>
